--- a/export-sample/sample-site-wordpress-theme/src/scss/object/page/01_about/_p-about-services.scss
+++ b/export-sample/sample-site-wordpress-theme/src/scss/object/page/01_about/_p-about-services.scss
@@ -2,5 +2,5 @@
 @use '../../../foundation' as *;
 
 /* ===============================================
-# MARK: -form
+# MARK: p-about-services
 =============================================== */
