--- a/export-sample/sample-site-wordpress-theme/src/scss/object/page/02_company/_index.scss
+++ b/export-sample/sample-site-wordpress-theme/src/scss/object/page/02_company/_index.scss
@@ -1,6 +1,4 @@
-@forward "_about-fv.scss";
-@forward "_about-concept.scss";
-@forward "_about-works.scss";
-@forward "_company-outline.scss";
-@forward "_company-history.scss";
-@forward "_company-fv.scss";
+@forward "_p-company-outline.scss";
+@forward "_p-company-history.scss";
+@forward "_p-company-overview.scss";
+@forward "_p-company-member.scss";
