--- a/export-sample/sample-site-wordpress-theme/src/scss/object/page/03_works/_p-works-fv.scss
+++ b/export-sample/sample-site-wordpress-theme/src/scss/object/page/03_works/_p-works-fv.scss
@@ -2,5 +2,5 @@
 @use '../../../foundation' as *;
 
 /* ===============================================
-# MARK: 絞り込みセクション
+# MARK: p-works-fv
 =============================================== */
