--- a/export-sample/sample-site-wordpress-theme/src/scss/object/page/06_recruit/_p-recruit-description.scss
+++ b/export-sample/sample-site-wordpress-theme/src/scss/object/page/06_recruit/_p-recruit-description.scss
@@ -2,5 +2,5 @@
 @use '../../../foundation' as *;
 
 /* ===============================================
-# MARK: -
+# MARK: p-recruit-description
 =============================================== */
