--- a/export-sample/sample-site-wordpress-theme/src/scss/object/page/07_topics/_p-topics-contents.scss
+++ b/export-sample/sample-site-wordpress-theme/src/scss/object/page/07_topics/_p-topics-contents.scss
@@ -2,5 +2,5 @@
 @use '../../../foundation' as *;
 
 /* ===============================================
-# MARK: 関連商品
+# MARK: p-topics-contents
 =============================================== */
