--- a/export-sample/sample-site-wordpress-theme/src/scss/object/page/07_topics/_p-topics-othens.scss
+++ b/export-sample/sample-site-wordpress-theme/src/scss/object/page/07_topics/_p-topics-othens.scss
@@ -2,5 +2,5 @@
 @use '../../../foundation' as *;
 
 /* ===============================================
-# MARK: その他の商品
+# MARK: 関連記事
 =============================================== */
