--- a/export-sample/sample-site-wordpress-theme/src/scss/object/page/02_company/_p-company-history.scss
+++ b/export-sample/sample-site-wordpress-theme/src/scss/object/page/02_company/_p-company-history.scss
@@ -2,5 +2,5 @@
 @use '../../../foundation' as *;
 
 /* ===============================================
-# MARK: ヒストリー
+# MARK: p-company-history
 =============================================== */
