--- a/export-sample/sample-site-wordpress-theme/src/scss/object/page/02_company/_p-company-outline.scss
+++ b/export-sample/sample-site-wordpress-theme/src/scss/object/page/02_company/_p-company-outline.scss
@@ -2,5 +2,5 @@
 @use '../../../foundation' as *;
 
 /* ===============================================
-# MARK: ファーストビュー
+# MARK: p-company-outline
 =============================================== */
