--- a/export-sample/sample-site-wordpress-theme/src/scss/object/page/03_works/_index.scss
+++ b/export-sample/sample-site-wordpress-theme/src/scss/object/page/03_works/_index.scss
@@ -1,7 +1,4 @@
-@forward "_about-fv.scss";
-@forward "_about-concept.scss";
-@forward "_about-works.scss";
-@forward "_company-outline.scss";
-@forward "_company-history.scss";
-@forward "_company-fv.scss";
-@forward "_works-narrow.scss";
+@forward "_p-works-fv.scss";
+@forward "_p-works-narrow.scss";
+@forward "_p-works-contents.scss";
+@forward "_p-works-others.scss";
