--- a/export-sample/sample-site-wordpress-theme/src/scss/object/page/04_items/_p-items-fv.scss
+++ b/export-sample/sample-site-wordpress-theme/src/scss/object/page/04_items/_p-items-fv.scss
@@ -2,5 +2,5 @@
 @use '../../../foundation' as *;
 
 /* ===============================================
-# MARK: 導入実績
+# MARK: p-items-fv
 =============================================== */
