--- a/export-sample/sample-site-wordpress-theme/src/scss/object/page/04_items/_p-items-narrow.scss
+++ b/export-sample/sample-site-wordpress-theme/src/scss/object/page/04_items/_p-items-narrow.scss
@@ -2,5 +2,5 @@
 @use '../../../foundation' as *;
 
 /* ===============================================
-# MARK: -
+# MARK: p-items-narrow
 =============================================== */
