--- a/export-sample/sample-site-wordpress-theme/src/scss/object/page/04_items/_p-items-sidebar.scss
+++ b/export-sample/sample-site-wordpress-theme/src/scss/object/page/04_items/_p-items-sidebar.scss
@@ -2,5 +2,5 @@
 @use '../../../foundation' as *;
 
 /* ===============================================
-# MARK: 実績
+# MARK: p-items-sidebar
 =============================================== */
