--- a/export-sample/sample-site-wordpress-theme/src/scss/object/page/05_contact/_p-contact-recruit.scss
+++ b/export-sample/sample-site-wordpress-theme/src/scss/object/page/05_contact/_p-contact-recruit.scss
@@ -2,5 +2,5 @@
 @use '../../../foundation' as *;
 
 /* ===============================================
-# MARK: 会社概要
+# MARK: p-contact-recruit
 =============================================== */
