--- a/export-sample/sample-site-wordpress-theme/src/scss/object/page/07_topics/_index.scss
+++ b/export-sample/sample-site-wordpress-theme/src/scss/object/page/07_topics/_index.scss
@@ -1,12 +1,3 @@
-@forward "_about-fv.scss";
-@forward "_about-concept.scss";
-@forward "_about-works.scss";
-@forward "_company-outline.scss";
-@forward "_company-history.scss";
-@forward "_company-fv.scss";
-@forward "_works-narrow.scss";
-@forward "_services-works.scss";
-@forward "_items-other.scss";
-@forward "_items-related.scss";
-@forward "_contact-form.scss";
-@forward "_topics-.scss";
+@forward "_p-topics-narrow.scss";
+@forward "_p-topics-contents.scss";
+@forward "_p-topics-othens.scss";
